--- a/index.html
+++ b/index.html
@@ -14,9 +14,24 @@
 
     <body>
         <section class="header">
-            <nav>
-                <a href=""><img src="images/logo.png"></a>
-                
+            <nav class="navbar">
+                <a class="nav-branding" href=""><img src="images/logo.png"></a>
+                <div class="nav-links" id="navLinks">
+
+                    <ul class="nav-menu">
+                        <li class="nav-item"><a class="nav-link" href="">HOME</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#abt">ABOUT</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">SERVICE</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">LOCATION</a></li>
+                    </ul>
+                    
+                </div>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+            </nav>
             <div class="text">
                 <h1 id="text">ARAFA TRADERS</h1>
                 <P>WHOLESALE RICE MERCHANT<br><span>COIMBATORE</span></P>
