--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="contact-col">
-                    <form action="form-handler.php" method="post">
+                    <form action="https://formsubmit.co/el/vexufi" method="POST">
                     
                         <input type="text" name="name" placeholder="Enter your name" required>
                         <input type="email" name="email" placeholder="Enter email address" required>
