--- a/index.html
+++ b/index.html
@@ -134,13 +134,14 @@
                     </div>
                 </div>
                 <div class="contact-col">
-                    <form action="form-handler.php" method="post">
+                    <form action="https://formspree.io/f/xlezynke" method="post" >
                     
                         <input type="text" name="name" id="name" placeholder="Enter your name" required>
                         <input type="email" name="email" id="email" placeholder="Enter email address" required>
                         <input type="text" name="subject" id="subject" placeholder="Enter your subject" required>
                         <textarea rows="8" name="message" id=",message" placeholder="Message" required></textarea>
                         <button type="submit" class="btn">Send Message</button>
+                        <button type="submit" class="btn" onclick="reset()">Clear</button>
                     </form>
                 </div>
             </div>
