menu bar updated
for menu

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <section class="header" id="header">
-            <nav class="navbar">
+            <nav class="navbar" id="navbar">
                 <a class="nav-branding" href="#header"><img src="images/logo.png"></a>
                 <div class="nav-links" id="navLinks">
 
@@ -33,6 +33,14 @@
                     <span class="bar" id="bar"></span>
                 </div>
             </nav>
+            
+            <header id="headerformbl">
+                <a class="logo" href="#header"><img src="images/logo.png"></a> 
+                <div id="toggle"></div>
+                <div id="navbar">
+                  
+                </div>
+            </header>
             <div class="text" >
                 <h1 id="text">ARAFA TRADERS</h1>
                 <P>WHOLESALE RICE MERCHANT<br><span>COIMBATORE</span></P>
@@ -62,7 +70,7 @@
                 <img class="myslides" src="images/s2.jpg">
                 <img class="myslides" src="images/s3.jpg">
                 <img class="myslides" src="images/s4.jpg">
-            </div>
+            </div>  
         </section>
         <section class="service" id="ser">
             <div class="service-head">
