change menu add whatsapp
add whatsapp and menu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     </head>
-
+   
     <body>
         <section class="header" id="header">
             <nav class="navbar" id="navbar">
@@ -46,6 +46,7 @@
                 <P>WHOLESALE RICE MERCHANT<br><span>COIMBATORE</span></P>
                 <a href="#contacts" class="btn">Visit Us</a>
             </div>
+            <a class="whatsapp" href="http://wa.me/8111899012"><img src="images/whatsapp.png"></a>
         </section>
         <section class="about" id="abt">
             <div class="head">
