--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <P>WHOLESALE RICE MERCHANT<br><span>COIMBATORE</span></P>
                 <a href="#contacts" class="btn">Visit Us</a>
             </div>
-            <a class="whatsapp" href="http://wa.me/8111899012"><img src="images/whatsapp.png"></a>
+            <a class="whatsapp" href="http://wa.me/+918111899012"><img src="images/whatsapp.png"></a>
         </section>
         <section class="about" id="abt">
             <div class="head">
@@ -67,10 +67,13 @@
                 </div>
             </div>
             <div class="imggs">
-                <img class="myslides" src="images/s1.jpg">
-                <img class="myslides" src="images/s2.jpg">
-                <img class="myslides" src="images/s3.jpg">
-                <img class="myslides" src="images/s4.jpg">
+                <img class="myslides" src="images/shop/1.jpg">
+                <img class="myslides" src="images/shop/2.jpg">
+                <img class="myslides" src="images/shop/3.jpg">
+                <img class="myslides" src="images/shop/4.jpg">
+                <img class="myslides" src="images/shop/5.jpg">
+                <img class="myslides" src="images/shop/6.jpg">
+                <img class="myslides" src="images/shop/7.jpg">
             </div>  
         </section>
         <section class="service" id="ser">
