--- a/index.html
+++ b/index.html
@@ -267,6 +267,12 @@
                             <p>Email us Your qurey</p>
                         </span>
                     </div>
+                    <div>
+                        <a href="https://www.facebook.com/arafa.traders.9"><i class="fa fa-facebook"></i></a>
+                        <a href="http://wa.me/+918111899012"><i class="fa fa-whatsapp"></i></a>
+                        <a href="https://www.instagram.com/arafatraders1034/"><i class="fa fa-instagram"></i></a>
+                        
+                    </div>
                 </div>
                
                 <div class="contact-col">
