--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@
             <span>Ajmal Ashraf</span>
 
         </div>
+        <div class="footerimg">
+            <img src="images/paddy1.png"> <img class="img2"src="images/paddy1.png">
+        </div>
+       
         
 
 
